--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 <body>
     <h1>Hello!</h1>
     <h2>Yo!</h2>
+    <ul>
+        <li>hej</li>
+        <li>hallå</li>
+        <li>tjena</li>
+    </ul>
 </body>
 </html>
